
        [float]
        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Add initial support for version 8 of `@elastic/elasticsearch` (which is
  still in pre-release).

[float]
===== Bug fixes


[[release-notes-3.22.0]]
==== 3.22.0 2021/10/21

[float]
===== Features

* Add support for node v17.

* When an error is captured, the APM agent will only immediately flush it to
  APM server if it is an "unhandled" error. Unhandled errors are typically those
  captured via the `uncaughtException` process event. Before this change, a
  captured error (e.g. for a 4xx or 5xx response from an HTTP server) was
  always immediately flushed. This could negatively impact performance for
  a service that was generating *frequent* errors. ({issues}686[#686])

[float]
===== Bug fixes

* Improve <<apm-flush,`apm.flush([cb])`>> to wait for inflight spans and errors
  before flushing data to APM server. Before this change, a recently ended span
  or recently <<apm-capture-error,captured error>> might not yet have completed
  processing (for example, stacktrace collection is asynchronous) and might
  not be included in the flush call.

* AWS Lambda changes: Disable metrics collection during the experimental phase
  of (re)implementing Lambda support ({pull}2363[#2363]). Some fixes for better
  flushing of data at the end of a Lambda invocation.

* <<span-to-string,`span.toString()`>> and <<transaction-to-string,`transaction.toString()`>>
  have been *deprecated*. The exact string output may change in v4 of the
  agent.

* Add `Span.ids` and `Transaction.ids` to TypeScript types. ({pull}2347[#2347])
