@@ -1,5 +1,8 @@
 'use strict'
 
+// Instrumentation of fastify.
+// https://www.fastify.io/docs/latest/LTS/
+
 const semver = require('semver')
 
 module.exports = function (fastify, agent, { version, enabled }) {
